--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required Core stylesheet -->
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.min.css" rel="stylesheet">
-<title>Title</title>
+<title>С днём рождения!🎂</title>
     
 
 </html>
