--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- Required Core stylesheet -->
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.min.css" rel="stylesheet">
-<title>С днём рождения!🎂</title>
+    <title>С днём рождения!🎂</title>
+    <link rel="shortcut icon" href="https://cdn.dynamicyield.com/api/8772872/images/1bd6a57ac48e5__favicon.png">
     
 
 </html>
@@ -28,10 +29,10 @@
         ">
             <div style="display: flex; flex-direction: column; padding: 16px;">
                 <h2 style="margin: 0;">
-                    azazaza
+                    Поздравляем!
                 </h2>
                 <div style="color: grey;">
-                    azaza2
+                    Вам предоставлен купон на СolourPop
                 </div>
             </div>
             <div class="glide">
@@ -44,22 +45,27 @@
                 </div>
             </div>
             <div class="mdc-card__content" style="padding: 8px">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                Виктория Алексеевна вам предоставлен купон на сумму 5000р. Поздравляем вас с днем рождения! Пускай эта косметика сделает вашу жизнь еще ярче.             
+                <ul>
+                    <li>Что-бы воспользоваться купоном найдите нужные товары на сайте ColourPop.</li>
+                    <li>Затем добавьте ссылку на товар в Google таблице и укажите нужное количество.</li>
+                    <li>Когда найдете все товары и добавите их в таблицу, сообщите об этом вашему любимому человеку!</li>
+                  </ul>
             </div>
             <div class="mdc-card__actions">
-                <a href="http://youtube.com" style="text-decoration: none;">
+                <a href="https://colourpop.com/" style="text-decoration: none;">
                     <button class="mdc-button mdc-card__action mdc-card__action--button">
                     <div class="mdc-button__ripple"></div>
                     <span class="mdc-button__label">
-                        Action 1
+                        ColourPop
                     </span>
                     </button>
                 </a>
-                <a href="http://youtube.com" style="text-decoration: none;">
+                <a href="https://docs.google.com/spreadsheets/d/12DAyd_n1MvSaHA3Aoal74YIOW-g4aKfC20yribQCQM0/edit?usp=sharing" style="text-decoration: none;">
                     <button class="mdc-button mdc-card__action mdc-card__action--button">
                     <div class="mdc-button__ripple"></div>
                     <span class="mdc-button__label">
-                        Action 2
+                        Использовать купон
                     </span>
                     </button>
                 </a>
