--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="mdc-card__content" style="padding: 8px">
                 Виктория Алексеевна вам предоставлен купон на сумму 10000р. Поздравляем вас с днем рождения! Пускай эта косметика сделает вашу жизнь еще ярче.             
                 <ul>
-                    <li>Что-бы воспользоваться купоном найдите нужные товары на сайте ColourPop.</li>
+                    <li>Что-бы воспользоваться купоном найдите нужные товары на сайте ColourPop и BeatyBay.</li>
                     <li>Затем добавьте ссылку на товар в Google таблице и укажите нужное количество.</li>
                     <li>Когда найдете все товары и добавите их в таблицу, сообщите об этом вашему любимому человеку!</li>
                   </ul>
@@ -58,6 +58,14 @@
                     <div class="mdc-button__ripple"></div>
                     <span class="mdc-button__label">
                         ColourPop
+                    </span>
+                    </button>
+                </a>
+                <a href="https://www.beautybay.com/" style="text-decoration: none;">
+                    <button class="mdc-button mdc-card__action mdc-card__action--button">
+                    <div class="mdc-button__ripple"></div>
+                    <span class="mdc-button__label">
+                        BeatyBay
                     </span>
                     </button>
                 </a>
