--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="mdc-card__content" style="padding: 8px">
                 Виктория Алексеевна вам предоставлен купон на сумму 10000р. Поздравляем вас с днем рождения! Пускай эта косметика сделает вашу жизнь еще ярче.             
                 <ul>
-                    <li>Что-бы воспользоваться купоном найдите нужные товары на сайте ColourPop и BeatyBay.</li>
+                    <li>Что-бы воспользоваться купоном найдите нужные товары на сайте ColourPop и BeautyBay.</li>
                     <li>Затем добавьте ссылку на товар в Google таблице и укажите нужное количество.</li>
                     <li>Когда найдете все товары и добавите их в таблицу, сообщите об этом вашему любимому человеку!</li>
                   </ul>
