--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Поздравляем!
                 </h2>
                 <div style="color: grey;">
-                    Вам предоставлен купон на СolourPop
+                    Вам предоставлен купон на СolourPop и BeautyBay
                 </div>
             </div>
             <div class="glide">
@@ -65,7 +65,7 @@
                     <button class="mdc-button mdc-card__action mdc-card__action--button">
                     <div class="mdc-button__ripple"></div>
                     <span class="mdc-button__label">
-                        BeatyBay
+                        BeautyBay
                     </span>
                     </button>
                 </a>
